# NormGeometry4

./: .gitignore  CMakeLists.txt
example/: vis_ene1000.0_posx1.0cm_posy1.0cm_poz100cm_seed0.root  vis_ene1000.0_posx1.0cm_posy1.0cm_poz100cm_seed0_seed_F.txt  vis_ene661.7_posx1.0cm_posy1.0cm_poz100cm_seed0_seed_F.txt  visualize_mass_model.rb
example/database/: detector_config_Norm.xml  detector_group_Norm.txt  simparam_Norm.sav.xml
examples/: run_simulation.rb  visualize_mass_model.rb
examples/database/: NORM_analysis_parameters.xml  NORM_channel_map.xml  NORM_detector_configuration.xml  NORM_simulation_parameters.xml  analysisparam_Norm.xml  detector_group_Norm.sav.txt  gen_detector_config_NORM.rb  simparam_Norm2.xml
include/: AHG4ElementHandler.hh  GeometryComptonCamera.hh  GeometryNorm.hh  NormMainGeometry.hh  NormMainGeometryRealWorld.hh
ruby/: CMakeLists.txt  normGeometry4.i
src/: AHG4ElementHandler.cc  AHG4MaterialManager.cc  GeometryComptonCamera.cc  GeometryNorm.cc  NormMainGeometry.cc  NormMainGeometryRealWorld.cc
